<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="LoginBtn">Login</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="ParseAppID">e211c3c23ef674c41070f1d7c6e315ad</string>
    <string name="Password">Password</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="Username">Username</string>
    <string name="Welcome">Welcome!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">TipJar</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="default_web_client_id">521113646859-rdk79vsnn7llkh98ih7gfdkmg8ac1a8d.apps.googleusercontent.com</string>
    <string name="emailHint">you@gmail.com</string>
    <string name="firebase_database_url">https://tipjar-3a704.firebaseio.com</string>
    <string name="forgotPass">Forgot password?</string>
    <string name="forgotPassword">forgot password?</string>
    <string name="gcm_defaultSenderId">521113646859</string>
    <string name="google_api_key">AIzaSyD78qNKo2l2y2hU-J2Nb1y5e9Km9l_Hs90</string>
    <string name="google_app_id">1:521113646859:android:0595d69135a909f7</string>
    <string name="google_crash_reporting_api_key">AIzaSyD78qNKo2l2y2hU-J2Nb1y5e9Km9l_Hs90</string>
    <string name="google_storage_bucket">tipjar-3a704.appspot.com</string>
    <string name="logIn">Log In</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="passDemo">password</string>
    <string name="passwordHint">password</string>
    <string name="register">Register</string>
    <string name="tablenum">Table #</string>
    <string name="tip">$Tip</string>
    <string name="title">TipJar</string>
    <string name="title_activity_goal">GoalActivity</string>
    <string name="title_activity_new_session">newSession</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_stats">Stats</string>
    <string name="userDemo">Username</string>
</resources>
