<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center_horizontal" android:background="@color/window_background" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <com.victor.loading.rotate.RotateLoading android:id="@+id/rotateLoading" android:layout_width="100dp" android:layout_height="100dp" android:layout_centerInParent="true" app:loading_color="#ffffff"/>
    <EditText android:textColor="@color/primary_text_color" android:textColorHint="@color/primary_text_color" android:id="@+id/main_activity_email_editText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="37dp" android:hint="@string/emailHint" android:ems="10" android:layout_above="@+id/main_activity_password_editText" android:layout_centerHorizontal="true" android:inputType="textEmailAddress" android:textAlignment="center"/>
    <EditText android:textColor="@color/primary_text_color" android:textColorHint="@color/primary_text_color" android:id="@+id/main_activity_password_editText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/passwordHint" android:ems="10" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:inputType="textPassword" android:textAlignment="center"/>
    <Button android:textColor="@color/secondary_text_color" android:id="@+id/main_activity_login_button" android:background="@color/secondary_color" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginTop="36dp" android:text="@string/logIn" android:layout_below="@+id/main_activity_password_editText" android:layout_centerHorizontal="true"/>
    <Button android:textColor="@color/secondary_text_color" android:id="@+id/main_activity_register_button" android:background="@color/secondary_color" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginTop="5dp" android:text="@string/register" android:layout_below="@+id/main_activity_login_button" android:layout_centerHorizontal="true"/>
    <ImageView android:id="@+id/imageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon" android:layout_alignBottom="@+id/main_activity_email_editText" android:layout_centerHorizontal="true"/>
</RelativeLayout>
